# blusher

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  Rakefile  blusher.gemspec
.github/workflows/: ci.yml  release.yml
benchmark/: bench.rb
ext/blusher/: Cargo.toml  extconf.rb
ext/blusher/src/: lib.rs
lib/: blusher.rb
lib/blusher/: native.rb  shim.rb  version.rb
lib/blusher/tables/: abap.json  actionscript.json  ada.json  apache.json  apex.json  apiblueprint.json  applescript.json  armasm.json  augeas.json  awk.json  batchfile.json  bbcbasic.json  bibtex.json  bicep.json  biml.json  bpf.json  brainfuck.json  brightscript.json  bsl.json  c.json  cfscript.json  cisco_ios.json  clean.json  clojure.json  cmake.json  cmhg.json  cobol.json  codeowners.json  coffeescript.json  common_lisp.json  conf.json  cpp.json  crystal.json  csharp.json  css.json  csvs.json  cuda.json  cypher.json  cython.json  d.json  (+187 more)
